@@ -390,6 +390,10 @@ option when forwarding to remote hosts - they may treat the date as invalid
 <td>format as RFC 3339 date</td>
 </tr>
 <tr>
+<td><b>date-unixtimestamp</b></td>
+<td>format as unix timestamp (seconds since epoch)</td>
+</tr>
+<tr>
 <td><b>date-subseconds</b></td>
 <td>just the subseconds of a timestamp (always 0 for a low precision timestamp)</td>
 </tr>
